--- a/CSE494_assignment_1/app/src/main/AndroidManifest.xml
+++ b/CSE494_assignment_1/app/src/main/AndroidManifest.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.asu.cse494_assignment_2"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    package="edu.asu.cse494_assignment_1" >
 
     <application
         android:allowBackup="true"
@@ -23,6 +15,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PatientInfoActivity"
+            android:label="@string/title_activity_patient_info" >
         </activity>
     </application>
 
